fix: restore horizontal scroll by adding minWidth overridable and enforcing nowrap headers

--- a/src/app/components/custom-table/custom-table.css
+++ b/src/app/components/custom-table/custom-table.css
@@ -11,6 +11,7 @@
 :host ::ng-deep .p-datatable-thead>tr>th {
     text-align: center;
     justify-content: center;
+    white-space: nowrap;
 }
 
 /* Force horizontal scroll when scrollable is powered on */
